--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,23 @@
+@font-face {
+    font-family: 'edson_comics_boldbold';
+    src: url('../edson-font/edson_comics_bold-webfont.eot');
+    src: url('../edsont-font/edson_comics_bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../edson-font/edson_comics_bold-webfont.woff2') format('woff2'),
+         url('../edson-font/edson_comics_bold-webfont.woff') format('woff'),
+         url('../edson-font/edson_comics_bold-webfont.ttf') format('truetype'),
+         url('../edson-font/edson_comics_bold-webfont.svg#edson_comics_boldbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body {
     background-color: black;
 }
 
 .main {
     background-color: white;
-    margin-top: 110px;
-    padding-left: 100px;
+    margin-top: 85px;
     min-width: 1200px; 
     height: 500px;
 }
@@ -14,16 +26,16 @@ body {
     float: left;
 }
 
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   background-repeat: no-repeat;
 }
 
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
 }
 
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
   display: none;
 } 
 
@@ -39,6 +51,10 @@ body {
   background-image: url('../images/ryu-throwing-hadouken.png');
 }
 
+.ryu-cool {
+    background-image: url('../images/ryu-cool.gif');
+}
+
 .hadouken {
   background-image: url('../images/hadouken.gif');
   width: 156px; 
@@ -48,4 +64,32 @@ body {
   top: 168px;
   left: -137px;
   float: left;
+}
+
+.text-context {
+    position: absolute;
+    left: 550px;
+    height: 500px; 
+    width: 600px;
+}
+
+.logo {
+    background-image: url('../images/streetfighter-logo.png');
+    width: 600px;
+    height: 250px; 
+    background-repeat: no-repeat;
+    display: none;
+}
+
+.instructions {
+    height: 300px; 
+    width: 600px; 
+    padding-top: 25px; 
+    text-align: center;
+    font-family: edson_comics_boldbold;
+    font-size: 30px; 
+}
+
+.instructions p {
+    padding-bottom: 30px; 
 }
