Renamed file and CSS changes

--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,9 @@ body {
     text-align: center;
     font-family: edson_comics_boldbold;
     font-size: 30px; 
+    width: 400px; 
+    margin: 0 auto; 
+
 }
 
 .instructions p {
